syntax = "proto3";

package summary.v1;

option go_package = "backend/gen/summary/v1;summaryv1";

// The request message containing the location and areas.
message StreamSummaryRequest {
  double lat = 1;
  double long = 2;
  repeated string areas = 3;
}

// The streamed response message containing the summary string.
message StreamSummaryResponse {
  string energy_managment_summary = 1;
  string traffic_update_summary = 2;
}

// The summary service definition.
service SummaryService {
  // Streams summary strings generated by GenAI for the given request.
  rpc StreamSummary (StreamSummaryRequest) returns (stream StreamSummaryResponse);
}
